# todo-api-ddd

./: .gitignore  Cargo.toml  README.md
migrations/: 20260204131210_users.sql  20260204131255_tasks.sql  20260204131317_task_history.sql
src/: config.rs  lib.rs  main.rs
src/application/: mod.rs
src/application/dtos/: mod.rs  task_dto.rs  user_dtos.rs
src/application/services/: mod.rs  task_service.rs
src/application/use_cases/auth/: login.rs  mod.rs  register.rs
src/application/use_cases/tasks/: create_task.rs  delete_task.rs  get_task.rs  list_task.rs  mod.rs  update_task.rs
src/domain/: errors.rs
src/domain/entities/: mod.rs  task.rs  task_history.rs  user.rs
src/domain/repositories/: mod.rs  task_repository.rs  user_repository.rs
src/domain/value_objects/: email.rs  mod.rs  task_priority.rs  task_status.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs  mod.rs
src/infrastructure/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/infrastructure/repositories/: mod.rs  postgres_task_repository.rs  postgres_user_repository.rs
src/infrastructure/security/: jwt.rs  mod.rs  password.rs
src/interface/: mod.rs
src/interface/extractors/: claims.rs  mod.rs
src/interface/handlers/: auth_handlers.rs  mod.rs  task_handlers.rs
src/interface/routes/: auth_routes.rs  mod.rs  task_routes.rs
tests/: task_tests.rs
tests/common/: mod.rs
