[package]
name = "todo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
#Web framework
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

#Database
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }


#Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

#Security
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"

#UUID and Time
uuid = { version = "1.20.0", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }

#Validation
validator = { version = "0.20.0", features = ["derive"] }


#Environment
dotenv = "0.15.0"

#Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Rate limiting
governor = "0.10.4"

#Errors
thiserror = "2.0.18"
anyhow = "1.0.100"

[dev-dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.13.1", features = ["json"] }
